workspace_1.18.1/.metadata/.plugins/org.eclipse.cdt.ui/getting_started.build.log
10:10:24 **** Incremental Build of configuration Debug for project getting_started ****
make -j20 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F446xx -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'MP41050_Write_Bit':
../Core/Src/main.c:63:25: warning: implicit declaration of function 'printf' [-Wimplicit-function-declaration]
   63 |                         printf("Error(Write_Bit): Value out of range\n");
      |                         ^~~~~~
../Core/Src/main.c:21:1: note: include '<stdio.h>' or provide a declaration of 'printf'
   20 | #include "main.h"
  +++ |+#include <stdio.h>
   21 | 
../Core/Src/main.c:63:25: warning: incompatible implicit declaration of built-in function 'printf' [-Wbuiltin-declaration-mismatch]
   63 |                         printf("Error(Write_Bit): Value out of range\n");
      |                         ^~~~~~
../Core/Src/main.c:63:25: note: include '<stdio.h>' or provide a declaration of 'printf'
../Core/Src/main.c: In function 'MP41050_Write_Resistance':
../Core/Src/main.c:99:25: warning: incompatible implicit declaration of built-in function 'printf' [-Wbuiltin-declaration-mismatch]
   99 |                         printf("Error(Write_Resistance): Resistance out of range\n");
      |                         ^~~~~~
../Core/Src/main.c:99:25: note: include '<stdio.h>' or provide a declaration of 'printf'
../Core/Src/main.c:104:37: warning: implicit declaration of function 'resistanceToBit' [-Wimplicit-function-declaration]
  104 |         uint8_t data[2] = {command, resistanceToBit(res)};
      |                                     ^~~~~~~~~~~~~~~
../Core/Src/main.c: At top level:
../Core/Src/main.c:114:9: error: conflicting types for 'resistanceToBit'; have 'uint8_t(int)' {aka 'unsigned char(int)'}
  114 | uint8_t resistanceToBit(int res){
      |         ^~~~~~~~~~~~~~~
../Core/Src/main.c:104:37: note: previous implicit declaration of 'resistanceToBit' with type 'int()'
  104 |         uint8_t data[2] = {command, resistanceToBit(res)};
      |                                     ^~~~~~~~~~~~~~~
../Core/Src/main.c: In function 'resistanceToBit':
../Core/Src/main.c:116:17: warning: incompatible implicit declaration of built-in function 'printf' [-Wbuiltin-declaration-mismatch]
  116 |                 printf("Error(resToBit): Resistance out of range\n");
      |                 ^~~~~~
../Core/Src/main.c:116:17: note: include '<stdio.h>' or provide a declaration of 'printf'
make: *** [Core/Src/subdir.mk:34: Core/Src/main.o] Error 1
"make -j20 all" terminated with exit code 2. Build might be incomplete.

10:10:26 Build Failed. 2 errors, 5 warnings. (took 1s.360ms)

